k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector: { app: hello-world }
  ports: [{ port: 80, targetPort: 5000 }]
